# fluid

admin-dashboard/: env.example  package-lock.json  package.json
admin-dashboard/app/admin/dashboard/: page.tsx
admin-dashboard/components/dashboard/: MultiChainDashboard.tsx
admin-dashboard/lib/: multi-chain-data.ts
client/: package.json
fluid-server/: Cargo.toml
fluid-server/src/: config.rs
server/: .env.example  Cargo.toml  package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: index.ts
server/src/handlers/: adminMultiChainStats.ts  feeBump.ts
server/src/models/: transactionLedger.ts
server/src/signing/: native.ts
