[package]
name = "fluid-signer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
ed25519-dalek = "2.2.0"
napi = { version = "3.8.3", features = ["async"] }
napi-derive = "3.3.3"
stellar-strkey = "0.0.16"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
zeroize = "1.8.2"

[build-dependencies]
napi-build = "2.3.0"
